2005-01-15  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-retrieve-next-pages): Fix
	footer cut; fix ad-hoc `shimbun-clear-contents' call.

2005-01-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Fix regexp.

2005-01-15  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-cnet-jp.el (shimbun-cnet-jp-clean-text-page): New function.
	(shimbun-cnet-jp-retrieve-next-pages): Ditto.
	(shimbun-make-contents): New method.

2005-01-14  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-w3m-dev.el (shimbun-w3m-dev-url): Change it into the
	new website URL.
	(shimbun-w3m-dev-group-alist): New variable.
	(shimbun-w3m-dev-groups): Generate the value using
	shimbun-w3m-dev-group-alist.
	(shimbun-index-url): New method
	(shimbun-reply-to): Generate the value using
	shimbun-w3m-dev-group-alist.

2005-01-05  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-itmedia.el (shimbun-itmedia-group-alist): Follow
	the change of ITmedia Games.

2005-01-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-asahi.el (shimbun-asahi-group-table): Add the rss group.
	(shimbun-index-url): Work with the rss group.
	(shimbun-asahi-get-headers): Ditto.

2004-07-24  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* w3m.el (w3m-menubar): Rearrange it hierarchical.
	(w3m-setup-menu): Use easymenu.

2005-01-03  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>

	* shimbun/sb-mailman.el (shimbun-mailman-headers): Modify regex
	for supporting quarter of a year message list (20xxq[1-4]); modify
	regex for message link to contain space before "I" tag.

	* shimbun/sb-wikimedia.el (shimbun-wikimedia-l10n-make-contents):
	Append "case-fold-search" local binding.

2005-01-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/shimbun.el (shimbun-mime-replace-image-tags): Allow not
	quoted url in img tags.
	Suggested by Tsuyoshi CHO <mfalcon_sky@emailuser.net>.

2004-12-24  Tsuyoshi CHO  <mfalcon_sky@emailuser.net>
